WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117252
SVG objects are misplaced when SVG root has a CSS transform.
https://bugs.webkit.org/show_bug.cgi?id=117252
Summary
SVG objects are misplaced when SVG root has a CSS transform.
alan
Reported
2013-06-05 06:08:17 PDT
ssia patch is coming up.
Attachments
Patch
(3.97 KB, patch)
2013-06-05 06:33 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.12 KB, patch)
2013-06-06 02:16 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2013-06-05 06:33:50 PDT
Created
attachment 203845
[details]
Patch
alan
Comment 2
2013-06-05 06:34:43 PDT
this matches FF behaviour.
Simon Fraser (smfr)
Comment 3
2013-06-05 12:12:51 PDT
Comment on
attachment 203845
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=203845&action=review
r+ but please make a ref test.
> Source/WebCore/ChangeLog:3 > + SVG objects are misplaced when SVG root has transform.
The bug title should be updated to say "has a CSS transform"
> LayoutTests/ChangeLog:15 > + * fast/transforms/transform-svg-expected.txt: Added. > + * fast/transforms/transform-svg.html: Added.
Wouldn't this be better as a ref test (e.g. compare translate(100px, 0) with left: 100px.
alan
Comment 4
2013-06-06 02:16:16 PDT
Created
attachment 203915
[details]
Patch
alan
Comment 5
2013-06-06 02:17:37 PDT
<
rdar://problem/14079129
>
WebKit Commit Bot
Comment 6
2013-06-06 03:25:07 PDT
Comment on
attachment 203915
[details]
Patch Clearing flags on attachment: 203915 Committed
r151265
: <
http://trac.webkit.org/changeset/151265
>
WebKit Commit Bot
Comment 7
2013-06-06 03:25:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug