SVG objects are misplaced when SVG root has CSS transform. https://bugs.webkit.org/show_bug.cgi?id=117252

Patch by Zalan Bujtas <zalan@apple.com> on 2013-06-06
Reviewed by Simon Fraser.

Update layer transforms for SVG if needed.

SVG root, similarly to RenderBlock needs to call RenderLayer
to get transforms updated after layout, in order to
position the transformed objects properly.

Source/WebCore:

Test: fast/transforms/transform-svg.html

* rendering/svg/RenderSVGRoot.cpp:
(WebCore::RenderSVGRoot::layout):

LayoutTests:

* fast/transforms/transform-svg-expected.html: Added.
* fast/transforms/transform-svg.html: Added.

Canonical link: https://commits.webkit.org/135538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151265 268f45cc-cd09-0410-ab3c-d52691b4dbfc